contrast fix

--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,5 @@
 :root {
-    --color-secondary: #36BF7F;
+    --color-secondary: #22774F;
     --color-secondary-pale: #def4e9;
     --color-primary: #394A59;
     --color-accent: #D96666;
